Bug 1842646 - Add tests for disabling offering translations r=gregtatum
Adds test infrastructure and cases for disabling
and enabling offering translations in the translations
panel.

Co-authored-by: Greg Tatum <tatum.creative@gmail.com>

Differential Revision: https://phabricator.services.mozilla.com/D186253

--- a/browser/components/translations/tests/browser/browser.ini
+++ b/browser/components/translations/tests/browser/browser.ini
@@ -30,6 +30,7 @@ support-files =
 [browser_translations_telemetry_firstrun_unsupported_lang.js]
 [browser_translations_telemetry_open_panel.js]
 [browser_translations_telemetry_panel_auto_offer.js]
+[browser_translations_telemetry_panel_auto_offer_settings.js]
 [browser_translations_telemetry_switch_languages.js]
 [browser_translations_telemetry_translation_failure.js]
 [browser_translations_telemetry_translation_request.js]
