--- a/browser/components/translations/tests/browser/browser.ini
+++ b/browser/components/translations/tests/browser/browser.ini
@@ -6,6 +6,7 @@ support-files =
 [browser_manage_languages.js]
 [browser_translations_panel_a11y_focus.js]
 [browser_translations_panel_always_translate_language.js]
+[browser_translations_panel_always_translate_language_bad_data.js]
 [browser_translations_panel_app_menu_never_translate_language.js]
 [browser_translations_panel_app_menu_never_translate_site.js]
 [browser_translations_panel_auto_translate_error_view.js]
